<resources>
    <string name="app_name">FidelityHackathon</string>
    <string name="carbon_footprint">Carbon Footprint Community</string>
    <string name="footprint_community">Footprint Community</string>
    <string name="anti_carbon">Anti-Carbon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="continue_further">Continue</string>
    <string name="na">N/A</string>
    <string name="anti_carbon_footprint_community">Anti-carbon footprint community</string>
    <string name="anti_carbon_footprint_community_guidelines">Carbon footprint guidelines</string>
    <string name="logout">Logout</string>
    <string name="show_members">Show Members</string>
    <string name="join_community">Join community</string>
    <string name="app_version">App version: %s</string>
    <string name="community_joined">Community Joined</string>
    <string name="not_in_community">Not in community</string>
    <string name="guidelines">Guidelines</string>
    <string name="measure">Measure your website performance</string>
    <string name="renewable_energy">Choose Renewable Energy Host Providers</string>
    <string name="stop_servers">Stop daemons and Servers When You’re Not Using Them</string>
    <string name="dark_mode">Use Dark Mode</string>
    <string name="off_camera">Turn Your Camera Off</string>
    <string name="optimize_fonts">Optimize Fonts</string>
    <string name="use_cdn">Use CDN and Server That Are Near to Your Users</string>
    <string name="use_static_pages">Use Static Web Pages</string>
    <string name="donot_use_gif">Do Not Use GIFs</string>
    <string name="optimise_images">Optimize Images</string>
    <string name="use_webp">Use the WebP format</string>
    <string name="lazy_load">Lazy load images</string>
    <string name="community_members">Community members</string>
</resources>