<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_carbon_footprint"
            android:contentDescription="@string/carbon_footprint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anti_carbon"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/footprint_community"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="65dp"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>